# Von

./: .env  .gitignore  LICENSE  Playground.ipynb  README.md  Von.code-workspace  token.json
note_assistor/: README.md  image-utilities.py  portal.py  requirements.txt
paper_recommender/: README.md  manifest.json  pyproject.toml  requirements.txt
paper_recommender/configs/: configs.ini
paper_recommender/mongodb_metadata/paper_recommender/: papers.metadata.json  projects.metadata.json  recommendations.metadata.json  users.metadata.json
paper_recommender/src/paper_recommender/paper_extraction/: aaai.py  base.py  from_url.py  jmlr.py  nature.py  pmlr.py
ruminate/: ruminate.py
src/: setup.py
src/UNKNOWN.egg-info/: SOURCES.txt  top_level.txt
src/paper_recommender/: .gitignore  README.md  dependencies.txt  requirements.txt
src/ruminate/: ruminate.py
src/tell_von/: README.md  classify_notes.py  main.py  ollama.py  portal.py  requirements.txt  setup.py
src/vonlib/: .gitignore  database_driver.py  effort_units.py  googledrive.py  llmconnect.py  localdrive.py  microsoftgraph.py  setup.py
src/web_interface/: app.py  user_data.py
tell_von/: .gitignore  Playground.ipynb  README.md  classify_notes.py  classify_notes_test.py  config.py  config.txt  googledrive.py  googlemail.py  gpt4connect.py  gpt4connect_test.py  llmconnect_test.py  portal.py  requirements.txt  ruminate.py  test_classify_notes.py  test_llmconnect.py
vonlib/: googledrive.py  llmconnect.py  test_llmconnect.py
vonlib.egg-info/: PKG-INFO  SOURCES.txt
workflows/: python-publish.yml
(+29 files in other folders)
